# KORMo-tutorial

./: .gitignore  README.md  pyproject.toml
setup/: create_uv_venv.sh
src/kormo/: __init__.py  utils.py
src/kormo/data_utils/: collator.py  sequence_pack.py
src/kormo/model/: _configuration_kormo.py  _modeling_kormo.py
src/kormo/modeling_configs/: kormo_10B.yaml  kormo_1B.yaml  load_model.py
src/kormo/train/: arguments.py  callbacks.py  loss.py  train_pt.py  trainer.py
src/scripts/: run_KORMo_1B_multinode.sh  run_KORMo_1B_singlenode.sh
src/scripts/configs/: KORMo_10B_stage1.yaml  KORMo_10B_stage2.yaml  KORMo_1B.yaml  accelerate_multinode_fsdp.yaml
tutorial/: 01.pretrain_from_scratch.ipynb  02.sft_qlora.ipynb  03.inference.ipynb
